# ai4mi_project

./: .gitignore  aggregate_metrics.py  main.py  statistical_test.py  stitch.py
data/SEGTHOR_CLEAN/: spacing.pkl
distorch/: CORRECTNESS.md  LICENSE  README.md  compute_metrics.py  pyproject.toml
distorch/distorch/: __init__.py  boundary.py  distance_transform.py  metrics.py  utils.py
distorch/distorch/min_pairwise_distance/: __init__.py  cuda.py
distorch/examples/: benchmark_monai.py  compare_distorch_monai.py  surface_metrics.py
distorch/figures/: CORRECTNESS_figures.py
distorch/tests/: test_boundary.py  test_distance_transform.py  test_utils.py
improvements/: data_augmentation.py  loss.py  main_postprocessing.py  postprocess_existing_stitched.py  postprocessing.py  preprocessing.py  stitch_postprocessing.py  unet_improvement.py
jobs/: compute_metrics.job  data_augmentation.job  get_data.job  install_env.job  load_segthor_clean.job  plot.job  quick_train  run_baseline.job  slice_segthor.job  statistical_test.job  stitch.job  stitch_baseline.job  train.job  train_baseline.job  train_data_augmentation.job
jobs/augmented/: aggregate_metrics.job  compute_metrics.job  data_augmentation.job  slice_segthor.job  stitch_augmented.job  train_augmented.job
jobs/improvements/: aggregate_metrics.job  compute_metrics.job  get_data_preprocessing.job  slice_segthor_preprocessing.job  stitch_preprocessing.job  train_preprocessing.job
jobs/loss/: aggregate.job  cedice_best.job  (+5 more)
outputs/: get_data.out
unet_model/: LICENSE_milesial.txt  unet.py  unet_sections.py
(+104 files in other folders)
